objects/tffa__ValueConfiguration__c.object
<CustomObject>
    <description>A setup for computing the lifetime value of an opened account, represented by an application in ACCOUNT_OPENED status. Modeled a decision table where the application characteristics represent the facts and the value represents the outcome.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AppliedAmountFrom__c</fullName>
        <description>Lower bound on applied amount for application in criteria.</description>
        <label>Applied Amount From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AppliedAmountTo__c</fullName>
        <description>Upper bound on applied amount for application in criteria.</description>
        <label>Applied Amount To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AppliedTermFrom__c</fullName>
        <description>Lower bound on applied term for application in criteria.</description>
        <label>Applied Term From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AppliedTermTo__c</fullName>
        <description>Upper bound on applied term for application in criteria.</description>
        <label>Applied Term To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CreatedChannel__c</fullName>
        <description>Type of the channel from which the application has been originated.</description>
        <label>Created Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the primary party in the bank - CUSTOMER, PROSPECT.  This is different from applicant role which is specific to an application. Represents a fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>The product category of the application. Represents a fact.</description>
        <label>Product category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SubmittedChannel__c</fullName>
        <description>This will be same as created channel unless a different channel was used to submit the application.</description>
        <label>Submitted Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>The expected value of the application given the facts. Represents the outcome.</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Value Configuration</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__ProductCategory__c</columns>
        <columns>tffa__Value__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__AppliedAmountFrom__c</columns>
        <columns>tffa__AppliedAmountTo__c</columns>
        <columns>tffa__AppliedTermFrom__c</columns>
        <columns>tffa__AppliedTermTo__c</columns>
        <columns>tffa__CreatedChannel__c</columns>
        <columns>tffa__SubmittedChannel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>